# math-datasets

./: .gitignore  ASDiv.jsonl  README.md  datasets.ipynb  pyproject.toml
math_datasets/: __init__.py  asdiv.py  base_dataset.py  evaluator.py  globals.py  gsm8k.py  model_names.py  svamp.py  training_data.py
math_datasets/datasets/: __init__.py  base_dataset.py  gsm8k.py  svamp.py
math_datasets/datasets/deprecated/: asdiv.py
math_datasets/fine_tuning/: trainer.py
math_datasets/fine_tuning/llm/: __init__.py  llm.py  transformer_llm.py  utils.py
math_datasets/fine_tuning/metrics/: compute_metrics.py
math_datasets/generator/: __init__.py  generate_responses.py
math_datasets/generators/: __init__.py  generate_responses.py  generator.py  react.py  rewoo.py
math_datasets/generators/rewoo_prompts/: deepseek-r1:1.5b.txt  qwen2.5:0.5b.txt  qwen3:0.6b.txt
math_datasets/transformer/: __init__.py  response_transformer.py
