[tool.poetry]
name = "math_datasets"
version = "0.1.0"
description = "A library for mathematical datasets."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fe-bit/math_datasets"
repository = "https://github.com/fe-bit/math_datasets"
keywords = ["math", "datasets", "library"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
datasets = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"