[tool.poetry]
name = "math_datasets"
version = "0.1.0"
description = "A library for mathematical datasets."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fe-bit/math_datasets"
repository = "https://github.com/fe-bit/math_datasets"
keywords = ["math", "datasets", "library"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
datasets = "^3.0"
ollama = "^0.5.1"
peft = "^0.15.2"
trl = "^0.18.1"
google-genai = "^1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"