[tool.poetry]
name = "math_datasets"
version = "0.1.0"
description = "A library for mathematical datasets."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fe-bit/math_datasets"
repository = "https://github.com/fe-bit/math_datasets"
keywords = ["math", "datasets", "library"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
datasets = "^3.0"
ollama = "^0.5.1"
peft = "^0.15.2"
trl = "^0.18.1"
google-genai = "^1.19.0"
bitsandbytes = "^0.46.0"
langchain-huggingface = "^0.3.0"
deepspeed = "^0.17.1"
huggingface-hub = "^0.33.0"
transformers = "^4.52.4"
optimum = "^1.26.1"
langgraph = "^0.4.8"
langchain = "^0.3.25"
langchain-google-genai = "^2.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"